@@ -67,6 +67,33 @@
          <groupId>org.graalvm.nativeimage</groupId>
          <artifactId>svm</artifactId>
          <scope>provided</scope>
+         <exclusions>
+            <!-- Exclude transitive dependency for truffle-api because it has runtime scope. We need to add it with provided scope. -->
+            <exclusion>
+               <groupId>org.graalvm-truffle</groupId>
+               <artifactId>truffle-api</artifactId>
+            </exclusion>
+         </exclusions>
+      </dependency>
+      <dependency>
+         <groupId>org.graalvm.truffle</groupId>
+         <artifactId>truffle-api</artifactId>
+         <scope>provided</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.graalvm.js</groupId>
+         <artifactId>js</artifactId>
+         <scope>runtime</scope>
+         <exclusions>
+            <exclusion>
+               <groupId>org.graalvm.truffle</groupId>
+               <artifactId>truffle-api</artifactId>
+            </exclusion>
+            <exclusion>
+               <groupId>org.graalvm.sdk</groupId>
+               <artifactId>graal-sdk</artifactId>
+            </exclusion>
+         </exclusions>
       </dependency>
 
       <!-- Test dependencies -->
@@ -207,16 +234,15 @@
                <!-- Execute adjustments of native configs that were generated during the previous maven build -->
                <execution>
                   <id>customize-resource-config</id>
-                  <phase>pre-package</phase>
+                  <phase>prepare-package</phase>
                   <goals>
                      <goal>java</goal>
                   </goals>
                   <configuration>
                      <!-- The main class of your build-time scanning code -->
-                     <mainClass>org.eclipse.esmf.buildtime.CustomizeResourceConfig</mainClass>
+                     <mainClass>org.eclipse.esmf.buildtime.CustomizeGraalVmConfigs</mainClass>
                      <!-- Pass the build target file as a commandline param -->
-                     <commandlineArgs>${project.build.outputDirectory}/META-INF/native-image/${project.groupId}/${project.artifactId}/resource-config.json
-                     </commandlineArgs>
+                     <commandlineArgs>${project.build.outputDirectory}/META-INF/native-image/${project.groupId}/${project.artifactId}</commandlineArgs>
                      <cleanupDaemonThreads>false</cleanupDaemonThreads>
                   </configuration>
                </execution>
@@ -252,6 +278,10 @@
                            <exclude>org.eclipse.esmf:esmf-semantic-aspect-meta-model</exclude>
                            <!-- Duplicate annotations that are already contained in javax.annotation-api -->
                            <exclude>javax.annotation:jsr250-api</exclude>
+                           <!-- GraalVM SDK classes & friends must not be used at runtime -->
+                           <exclude>org.graalvm.sdk:graal-sdk</exclude>
+                           <exclude>org.graalvm.nativeimage:svm</exclude>
+                           <exclude>org.graalvm.truffle:truffle-api</exclude>
                         </excludes>
                      </artifactSet>
                      <filters>
@@ -296,6 +326,13 @@
                            <artifact>org.apache.xmlgraphics:batik-svgrasterizer</artifact>
                            <excludes>
                               <exclude>org/apache/batik/apps/rasterizer/resources/rasterizer.policy</exclude>
+                           </excludes>
+                        </filter>
+                        <!-- These configs add lots of spurious GraalVM configuration -->
+                        <filter>
+                           <artifact>org.jboss.forge.roaster:roaster-jdt</artifact>
+                           <excludes>
+                              <exclude>META-INF/native-image/**</exclude>
                            </excludes>
                         </filter>
                         <!-- Required to have Model Instantiators available -->
@@ -379,6 +416,10 @@
                </annotationProcessorPaths>
                <compilerArgs>
                   <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.desktop/sun.awt=ALL-UNNAMED</arg>
+                  <arg>--add-exports</arg>
+                  <arg>java.desktop/sun.font=ALL-UNNAMED</arg>
                </compilerArgs>
                <forceJavacCompilerUse>true</forceJavacCompilerUse>
             </configuration>
@@ -437,11 +478,18 @@
                </execution>
             </executions>
          </plugin>
+
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-javadoc-plugin</artifactId>
+            <configuration>
+               <excludePackageNames>org.eclipse.esmf.substitution</excludePackageNames>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
 
    <profiles>
-
       <profile>
          <id>copy-font-configuration</id>
          <activation>
@@ -464,53 +512,9 @@
                            <goal>download-single</goal>
                         </goals>
                         <configuration>
-                           <url>
-                              file://${env.JAVA_HOME}/lib
-                           </url>
+                           <url>file://${env.JAVA_HOME}/lib</url>
                            <fromFile>fontconfig.bfc</fromFile>
-                           <toFile>${project.build.directory}/lib/fontconfig.bfc</toFile>
-                        </configuration>
-                     </execution>
-                     <execution>
-                        <id>copy-fontconfig-properties-src</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>download-single</goal>
-                        </goals>
-                        <configuration>
-                           <url>
-                              file://${env.JAVA_HOME}/lib
-                           </url>
-                           <fromFile>fontconfig.properties.src</fromFile>
-                           <toFile>${project.build.directory}/lib/fontconfig.properties.src</toFile>
-                        </configuration>
-                     </execution>
-                     <execution>
-                        <id>copy-psfont-properties-ja</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>download-single</goal>
-                        </goals>
-                        <configuration>
-                           <url>
-                              file://${env.JAVA_HOME}/lib
-                           </url>
-                           <fromFile>psfont.properties.ja</fromFile>
-                           <toFile>${project.build.directory}/lib/psfont.properties.ja</toFile>
-                        </configuration>
-                     </execution>
-                     <execution>
-                        <id>copy-psfontj2d-properties</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>download-single</goal>
-                        </goals>
-                        <configuration>
-                           <url>
-                              file://${env.JAVA_HOME}/lib
-                           </url>
-                           <fromFile>psfontj2d.properties</fromFile>
-                           <toFile>${project.build.directory}/lib/psfontj2d.properties</toFile>
+                           <toFile>${project.build.outputDirectory}/fontconfig.bfc</toFile>
                         </configuration>
                      </execution>
                   </executions>
@@ -537,7 +541,7 @@
                      <execution>
                         <id>build-native</id>
                         <goals>
-                           <goal>build</goal>
+                           <goal>compile</goal>
                         </goals>
                         <phase>package</phase>
                      </execution>
@@ -545,6 +549,16 @@
                   <configuration>
                      <mainClass>${main-class}</mainClass>
                      <imageName>${binary-name}</imageName>
+                     <buildArgs>
+                        <arg>-J-XX:MaxRAMPercentage=90.0</arg>
+                        <arg>-J-XX:GCTimeRatio=19</arg>
+                        <arg>-J--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
+                        <arg>-J--add-exports=java.desktop/sun.font=ALL-UNNAMED</arg>
+                     </buildArgs>
+                     <quickBuild>true</quickBuild>
+                     <classpath>
+                        <param>${project.build.directory}/${project.artifactId}-${project.version}.jar</param>
+                     </classpath>
                   </configuration>
                </plugin>
             </plugins>
